# Timur-Ivan-Alexey-repos

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  makefile
.github/workflows/: cmake.yml
BitCounter/: BitCounter.cpp  BitCounter.h
Testing/: TAG
bit_inversion/: CMakeLists.txt  bit_inversion.cpp  bit_inversion.h
linters/: run.sh
memoryError/: CMakeLists.txt
memtest/: memtest.sh
tests/: CMakeLists.txt  bit_inversion_test.cpp
